--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
 <!doctype html>
 <html>
-<style>
-li {
-  list-style: none;
-  float: left;
-  outline: solid;
-  margin: 10px;
-  width: 170px;
-  height: 150px;
-  font-size: 8em;
-  text-align: center;
-} 
-</style>
+<head>
+<link href="game.css" rel=stylesheet>
+</head>
 <h1>Chimp Game</h1>
-<div id="game" style='width: 800px;'></div>
+<div id="game"></div>
 <div id="score"></div>
 <script src="game.js"></script>
 </html>
