--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <h1>Chimp Game</h1>
 <div id="game"></div>
 <div id="score"></div>
+<div id="graph"</div>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="game.js"></script>
 </html>
