game time added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <h1>Chimp Game</h1>
 <div id="game"></div>
 <div id="score"></div>
-<div id="graph"</div>
+<div id="moves"</div>
+<div id="games"</div>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script src="game.js"></script>
 </html>
