--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <link href="game.css" rel=stylesheet>
+<title>Chimp Game</title>
 </head>
-<h1>Chimp Game</h1>
 <div id="game"></div>
+<br>
 <div id="score"></div>
+<br>
 <div id="moves"</div>
 <div id="games"</div>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
