log first move time separately as view time - todo add mistakes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Chimp Game</title>
 </head>
 <div id="game"></div>
+<div id="viewtime"</div>
 <div id="moves"</div>
 <div id="games"</div>
 <div id="score"></div>
