--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <div id="moves"</div>
 <div id="games"</div>
 <div id="score"></div>
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<!--script src="https://cdn.plot.ly/plotly-latest.min.js"></script-->
 <script src="game.js"></script>
 </html>
