made links clickable - and googleable maybe

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <link href="game.css" rel=stylesheet>
 <title>Chimp Game</title>
 </head>
-<div id="about">
+<p id="about">
 Chimp game inspired by <a href=https://www.youtube.com/channel/UC6nSFpj9HTCZ5t-N3Rm3-HA>Vsauce</a> <a href=https://www.youtube.com/playlist?list=PLZRRxQcaEjA4qyEuYfAMCazlL0vQDkIj2>Mind Field</a> S3 E1 <a href=https://www.youtube.com/watch?v=ktkjUjcZid0>The Cognitive Tradeoff Hypothesis</a>
 <br>Fork me on <a href=https://github.com/dagelf/mindfield>github</a>! (Or edit me in your browser - press Ctrl+Shift+J in Chrome (better) or Ctrl+F5 in Firefox! See the instructions at github for tips.<br>
 Score at the bottom. Resize window and reload (press F5) to resize the board. Uncomment plotly in code to see graphs.
 Touch here to hide this message!  
-</div>
+</p>
 <div id="game"></div>
 <div id="viewtime"</div>
 <div id="moves"</div>
